<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:background="@drawable/btui"
            android:contentDescription="@string/TTT"
            app:srcCompat="@drawable/logo_tic_tac_ultimate_tic_tac_toe_font_png_favpng_anewwsisnqj8i4grskrbqytxf" />

        <Button
            android:id="@+id/play"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btui"
            android:onClick="BuPlay"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="220dp"
            android:background="@drawable/btui"
            android:onClick="BuExit"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>