<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Winner">

    <TextView
        android:id="@+id/Message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/the_winner_is"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/WinnerName"
        android:layout_width="196dp"
        android:layout_height="165dp"
        android:gravity="center"
        android:text="@string/n"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Message"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="OnClick" />

    <Button
        android:background="@drawable/btui"
        android:textColor="@color/white"
        android:onClick="CloseWindow"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/close"

        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WinnerName"
        app:layout_constraintVertical_bias="0.353" />
</androidx.constraintlayout.widget.ConstraintLayout>